# snapdrop

./: .gitattributes  .gitignore  .jscsrc  .jshintrc  .prettierrc  .travis.yml  LICENSE.md  README.md  Reki5  bower.json  docker-compose.yml  domains.txt  faq.md  gulpfile.js  index.js  nginx-proxy  nginx-proxy.yml  nginx.conf.example  package.json  redme.txt  travis-runner.sh  wct.conf.js
.github/: FUNDING.yml
.github/workflows/: codeql-analysis.yml
app/: cache-config.json  index.html  manifest.json  robots.txt  sw-import.js
app/elements/: elements.html  routing.html
app/scripts/: animated-bg.js  app.js
app/styles/: app-theme.html  icons.html  main.css  shared-styles.html
app/test/: index.html  my-greeting-basic.html  my-list-basic.html
client/: index.html  manifest.json  mime.types  service-worker.js  styles.css
client/images/: snapdrop-graphics.sketch
client/scripts/: clipboard.js  localization.js  manifest.js  network-v2.js  network.js  ui.js  (+2 more)
devserver/: server.pem  simple-https-server.py  snapdrop-cert.crt
docker/: fqdn.env  nginx-with-openssl.Dockerfile  nginx.Dockerfile
docs/: README.md  add-es2015-support-babel.md  chrome-dev-editor.md  deploy-to-firebase-pretty-urls.md  deploy-to-github-pages.md  faq.md  host-your-own.md  local-dev.md  mobile-chrome-apps.md  polymer-perf.md
extension/: background.js  manifest.json  popup.html
nginx/: default.conf
openssl/: snapdropCert.cnf
server/: index.js  package-lock.json  package.json  ws-server.js
server-rs/: Cargo.toml  regexes.yaml  rustfmt.toml
server-rs/src/: error.rs  headers.rs  main.rs  peer.rs
tasks/: ensure-files.js
(+48 files in other folders)
